Fix dependency table overflowing

--- a/frontend/src/global/dependencyTable/DependencyTable.scss
+++ b/frontend/src/global/dependencyTable/DependencyTable.scss
@@ -1,5 +1,7 @@
 .dependencyTable {
     background-color: white;
+    height: 85%;
+    overflow-y: scroll
 }
 
 .dependencyTableCell {
